replaced div tags with button tags and fixed button and local storage scripts

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
             9 AM
           </div>
           <textarea id='9' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
         <div class="row">
           <div class="col hour">
             10 AM
           </div>
           <textarea id='10' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
       </div>
       <div class="container">
@@ -57,18 +57,18 @@
             11 AM
           </div>
           <textarea id='11' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
         <div class="row">
           <div class="col hour">
             12 PM
           </div>
           <textarea id='12' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
       </div>
       <div class="container">
@@ -77,18 +77,18 @@
             1 PM
           </div>
           <textarea id='13' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
         <div class="row">
           <div class="col hour">
             2 PM
           </div>
           <textarea id='14' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
       </div>
       <div class="container">
@@ -97,27 +97,27 @@
             3 PM
           </div>
           <textarea id='15' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
         <div class="row">
           <div class="col hour">
             4 PM
           </div>
           <textarea id='16' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
         <div class="row">
           <div class="col hour">
             5 PM
           </div>
           <textarea id='17' class="col-6"></textarea>
-          <div class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
-          </div>
+          </button>
         </div>
         
         
