added retreiving items from local storage function

--- a/index.html
+++ b/index.html
@@ -33,89 +33,89 @@
       <!-- Timeblocks go here -->
       <div class="container">
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             9 AM
           </div>
           <textarea id='9' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             10 AM
           </div>
           <textarea id='10' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             11 AM
           </div>
           <textarea id='11' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             12 PM
           </div>
           <textarea id='12' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             1 PM
           </div>
           <textarea id='13' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             2 PM
           </div>
           <textarea id='14' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
       </div>
       <div class="container">
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             3 PM
           </div>
           <textarea id='15' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             4 PM
           </div>
           <textarea id='16' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
         <div class="row">
-          <div class="col hour">
+          <div class="col-2 hour">
             5 PM
           </div>
           <textarea id='17' class="col-6"></textarea>
-          <button class="col saveBtn d-flex align-items-center justify-content-center">
+          <button class="col-2 saveBtn d-flex align-items-center justify-content-center">
             <i class="fas fa-save icon"></i>
           </button>
         </div>
